--- a/abriefhistoryoftypev3.HTML
+++ b/abriefhistoryoftypev3.HTML
@@ -8,7 +8,8 @@
 
 
   <link href='css/stylehistoryv2.css' type="text/css" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css?family=Oxygen:300,400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700&display=swap" rel="stylesheet">
+
 
   <body>
 <h1>The Brief History of Type</h1>
