--- a/baskerville4.html
+++ b/baskerville4.html
@@ -6,6 +6,8 @@
   </head>
   <link href='css/style.css' type="text/css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
+
 
 
   <body>
@@ -13,15 +15,18 @@
   <h3>Letter Founder & Master Printer</h3>
 
 <nav>
-<li><a href="#the-man"> The Man</a></li>
-<li><a href="#the-typeface">The Typeface </a><br /></li>
-<li><a href = "#mrs eaves">Mrs Eaves </a><br /></li>
+  <ul>
+         <li><a href="#the-man"> The Man</a></li>
+         <li><a href="#the-typeface">The Typeface</a></li>
+        <li><a href = "#mrs-eaves">Mrs Eaves</a></li>
+  </ul>
 </nav>
 
 
 
   <p>John Baskerville (1706–1775) was an English businessman whose entrepreneurial attentions included japanning and papier-mâché; he is, however, best remembered as a typographer and printer, not least for the design of the eponymous typeface which, to this very day, bears his name.</P>
-  <h2>The Man</h2>
+  <h2 id="the-man">The Man</h2>
+
 
        <p>Baskerville was born in the village of Wolverley, near Kidderminster in Worcestershire, and worked as a printer in Birmingham. Baskerville printed works for the University of Cambridge and, although an atheist, printed a splendid folio bible in 1763. His typefaces were greatly admired by Benjamin Franklin, a printer and fellow member of the Royal Society of Arts, who took the designs back to the newly-created United States, where they were adopted for most federal government publishing.
 
@@ -32,7 +37,7 @@
   <cite> - John Baskerville, preface to Milton, 1758 (Anatomy of a Typeface) </cite>
 
 
-  <h2>The Typeface</h2>
+  <h2 id="the-typeface">The Typeface</h2>
 
   <p>Baskerville is a Transitional serif typeface designed by John Baskerville in 1757, positioned between the Old Style typefaces of William Caslon, and the modern styles of Giambattista Bodoni and Firmin Didot.
 
@@ -40,18 +45,48 @@
 
   Baskerville’s work was criticised by jealous competitors and soon fell out of favour. Since the 1920s, however, numerous revivals of Baskerville have been released by Linotype, Monotype, and other type foundries. Émigré released a popular revival of the typeface in 1996 called Mrs Eaves, named for Baskerville’s wife, Sarah Eaves. Baskerville represents the peak of Transitional type face design and bridges the gap between Old Style and Modern type design.</p>
 
+<p>Founderies that offer versions of Baskerville:</p>
 
-  <h2>Mrs Eaves</h2>
+<br></br>
+
+<ul>
+<h3>Hot type</h3>
+<li>Deberny & Peignot</li>
+<li>Fry Foundry</li>
+<li>American Type Founders</li>
+<li>Linotype</li>
+<li>Lanston Monotype
+</ul>
+
+<br></br>
+<h3>Cold Type</h3>
+<li>Autologic</li>
+<li>Berthold</li>
+<li>Compugraphic</li>
+<li>Hell AG</li>
+<li>Monotype</li>
+<br></br>
+<h3>Digital Type</h3>
+<li>Linotype</li>
+<li>URW++</li>
+<li>Monotype</li>
+<li>Bitstream</li
+
+  <br></br>
+
+  <h2 id="mrs-eaves">Mrs Eaves</h2>
 
   <p>Mrs Eaves is named after Sarah Eaves, the woman who became John Baskerville’s wife. As Baskerville was setting up his printing and type business, Mrs. Eaves moved in with him as a live-in housekeeper, eventually becoming his wife after the death of her first husband, Mr. Eaves. Mrs Eaves is a revival of the types of English printer and punchcutter John Baskerville, and is related to contemporary Baskerville typefaces.
 
   Like Baskerville, Mrs Eaves, cut by Zuzana Licko of Émigré, has a near vertical stress, departing from the Old Style model. Identifying characters, similar to Baskerville’s types, are the lowercase g with its open lower counter and swash-like ear. Both the roman and italic uppercase Q have a flowing swash-like tail. The uppercase C has serifs at top and bottom; there is no serif at the apex of the central junction in uppercase W; and the uppercase G has a sharp spur suggesting a vestigial serif.</p>
 
-  <<footer>The content on this page is developed from original copy from Wikipedia and licensed under a Creative Commons Attribution-ShareAlike License, meaning you’re allowed to copy, distribute and transmit the work as long as it is attributed to the original authors.
-    <a href="https://ethanfearon.tumblr.com/"
+  <footer>The content on this page is developed from original copy from Wikipedia and licensed under a Creative Commons Attribution-ShareAlike License, meaning you’re allowed to copy, distribute and transmit the work as long as it is attributed to the original authors.</footer>
+  <a href="https://ethanfearon.tumblr.com/"
     title="view my personal tumblr"
-    target=_"blank">HTML by Ethan Fearon</a>
-  </footer>
+    target=_"blank">HTML by Ethan Fearon
+
+  </a>
+
 
 </body>
 </html>
