--- a/baskerville4.html
+++ b/baskerville4.html
@@ -44,7 +44,7 @@
   The typeface is the result of Baskerville’s intent to improve upon the types of William Caslon. He increased the contrast between thick and thin strokes, making the serifs sharper and more tapered, and shifted the axis of rounded letters to a more vertical position. The curved strokes are more circular in shape, and the characters became more regular. These changes created a greater consistency in size and form.
 
   Baskerville’s work was criticised by jealous competitors and soon fell out of favour. Since the 1920s, however, numerous revivals of Baskerville have been released by Linotype, Monotype, and other type foundries. Émigré released a popular revival of the typeface in 1996 called Mrs Eaves, named for Baskerville’s wife, Sarah Eaves. Baskerville represents the peak of Transitional type face design and bridges the gap between Old Style and Modern type design.</p>
-
+<section>
 <p>Founderies that offer versions of Baskerville:</p>
 
 <br></br>
@@ -66,11 +66,14 @@
 <li>Hell AG</li>
 <li>Monotype</li>
 <br></br>
+
 <h3>Digital Type</h3>
 <li>Linotype</li>
 <li>URW++</li>
 <li>Monotype</li>
-<li>Bitstream</li
+<li>Bitstream</li>
+
+</section>
 
   <br></br>
 
@@ -80,12 +83,12 @@
 
   Like Baskerville, Mrs Eaves, cut by Zuzana Licko of Émigré, has a near vertical stress, departing from the Old Style model. Identifying characters, similar to Baskerville’s types, are the lowercase g with its open lower counter and swash-like ear. Both the roman and italic uppercase Q have a flowing swash-like tail. The uppercase C has serifs at top and bottom; there is no serif at the apex of the central junction in uppercase W; and the uppercase G has a sharp spur suggesting a vestigial serif.</p>
 
-  <footer>The content on this page is developed from original copy from Wikipedia and licensed under a Creative Commons Attribution-ShareAlike License, meaning you’re allowed to copy, distribute and transmit the work as long as it is attributed to the original authors.</footer>
-  <a href="https://ethanfearon.tumblr.com/"
-    title="view my personal tumblr"
-    target=_"blank">HTML by Ethan Fearon
-
-  </a>
+  <footer>The content on this page is developed from original copy from Wikipedia and licensed under a Creative Commons Attribution-ShareAlike License, meaning you’re allowed to copy, distribute and transmit the work as long as it is attributed to the original authors.
+<br></br>
+    <a href="https://ethanfearon.tumblr.com/"
+      title="view my personal tumblr"
+      target=_"blank">HTML by Ethan Fearon</a>
+</footer>
 
 
 </body>
