--- a/baskerville5.html
+++ b/baskerville5.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>baskerville4</title>
+    <title>baskerville5</title>
   </head>
   <link href='css/style.css' type="text/css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700|Open+Sans&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
 
   <p>John Baskerville (1706–1775) was an English businessman whose entrepreneurial attentions included japanning and papier-mâché; he is, however, best remembered as a typographer and printer, not least for the design of the eponymous typeface which, to this very day, bears his name.</P>
   <h2 id="the-man">The Man</h2>
-<img src="john-baskerville.jpg" alt="John Baskerville"/>
+<img src="john-baskerville.jpeg" alt="John Baskerville"/>
 
        <p>Baskerville was born in the village of Wolverley, near Kidderminster in Worcestershire, and worked as a printer in Birmingham. Baskerville printed works for the University of Cambridge and, although an atheist, printed a splendid folio bible in 1763. His typefaces were greatly admired by Benjamin Franklin, a printer and fellow member of the Royal Society of Arts, who took the designs back to the newly-created United States, where they were adopted for most federal government publishing.
 
