--- a/abriefhistoryoftypev5.HTML
+++ b/abriefhistoryoftypev5.HTML
@@ -70,25 +70,90 @@
     <p>Bodoni designed many typefaces, each one in a large range of sizes. He is even more admired as a compositor, as the large range of sizes which he cut enabled him to compose his pages with the greatest possible subtlety of spacing. Like Baskerville, he set off his texts with wide margins and used little or no decoration.</p>
 
     <table>
-      <caption></caption>
-    <tr>
-      <th> Hot Type </th>
-      <th> Cold Type </th>
-      <th> Digital Type </th>
-    </tr>
-    <td> Deberny & Peignot </td>
-    <td> Autologic </td>
-    <td> Linotype </td>
-    </tr>
-    <tr>
-      <td>Fry Foundry</td>
-      <td>Berthold </td>
-      <td>URW++</td>
-    </tr>
-    <tr>
-    <td> Monotype </td>
-    <td>Bitstream </td>
-    </tr>
+        <Caption> Typefaces our designers are best known for and the foundaries
+          who still produce them</caption>
+        <tr>
+          <th>Designer</th>
+          <th>Typeface</th>
+          <th>Foundary</th>
+        </tr>
+
+        <tr>
+          <td rowspan="3">Nicolas Jenson</td>
+          <td>Adobe Jenson</td>
+          <td>Adobe</td>
+        </tr>
+
+        <tr>
+          <td>Jenson Classico</td>
+          <td>Omnibus Typografi</td>
+        </tr>
+
+        <tr>
+          <td>LTC Jenson</td>
+          <td>Lanston Type</td>
+        </tr>
+
+        <tr>
+          <td rowspan="3">Claude Garamont</td>
+          <td>Berthold Garamond</td>
+          <td>Berthold</td>
+        </tr>
+
+        <tr>
+          <td> Simoncini Garamond</td>
+          <td>Linotype</td>
+        </tr>
+
+        <tr>
+          <td>Adobe Garamond</td>
+          <td>Adobe</td>
+        </tr>
+
+        <tr>
+          <td rowspan="3">William Caslon</td>
+          <td>Caslon 540</td>
+          <td>Bistream</td>
+        </tr>
+
+        <tr>
+          <td>ITC Founders Caslon</td>
+          <td>ITC Library</td>
+        </tr>
+
+        <tr>
+          <td>Adobe Caslon</td>
+          <td>Adobe</td>
+        </tr>
+
+        <tr>
+          <td rowspan="3">John Baskerville</td>
+          <td>Baskerville</td>
+          <td>Monotype</td>
+        </tr>
+
+        <tr>
+          <td>Baskerville Old Face</td>
+          <td>Scangraphic</td>
+        </tr>
+
+
+
+        <tr>
+          <td>Bauer Bondoni</td>
+          <td>Linotype</td>
+        </tr>
+
+        <tr>
+          <td rowspan="3">Giambattista Bondoni</td>
+          <td>Bondoni</td>
+          <td>Adobe</td>
+        </tr>
+
+        <tr>
+          <td>Bondoni Classic</td>
+          <td>Wiescher Designs</td>
+        </tr>
 
     </table>
 
