--- a/abriefhistoryoftypev5.HTML
+++ b/abriefhistoryoftypev5.HTML
@@ -65,7 +65,7 @@
     <p>Baskerville was born in the village of Wolverley, near Kidderminster in Worcestershire, and worked as a printer in Birmingham. Baskerville printed works for the University of Cambridge and, although an atheist, printed a splendid folio bible in 1763. His typefaces were greatly admired by Benjamin Franklin, a printer and fellow member of the Royal Society of Arts, who took the designs back to the newly created United States, where they were adopted for most federal government publishing.</p>
 
     <h2>Giambattista Bodoni</h2>
-    <img src="giambattista-bodoni.jpg" id="center"/>
+    <img src="giambattista_bodoni.jpg" id="center"/>
 
     <p>Giambattista Bodoni (1740 – 1813) was an Italian typographer, type designer, compositor, printer and publisher in Parma. He first took the type designs of Pierre Simon Fournier as his exemplars, but afterwards became an admirer of the more modelled types of John Baskerville; and he and Firmin Didot evolved a style of type called 'New Face', in which the letters are cut in such a way as to produce a strong contrast between the thick and thin parts of their body.</p>
 
